# Heat_diffusion_solid

./: CMakeLists.txt  README.md  main.cpp  map.cpp  map.hpp  operators.cpp  operators.hpp  temp_field.cpp  temp_field.hpp
